--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/myblogdb
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=myblog
+spring.datasource.password=mysql
 
 # hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
